# liverNeedleModel

./: README.md
AliMuwahedExtension/: CMakeLists.txt
AliMuwahedExtension/AliMuwahedModule/: AliMuwahedModule.py  CMakeLists.txt
AliMuwahedExtension/AliMuwahedModule/Resources/UI/: AnotherModule.ui
Liver-Scene/: Liver-Scene.mrml  leftkidney.vtk  leftlung.vtk  liverkyst.vtk  livertumor04.vtk  rightkidney.vtk  rightlung.vtk  skin.vtk  spleen.vtk  venoussystem.vtk
myNiceExtension/AnotherModule/: AnotherModule.py
